--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,9 @@ a {
     background-color: var(--global);
     border-radius: 24px;
     text-decoration: none;
-    width: 60%;
+    width: 146px;
     text-align: center;
-    padding: 12px 32px;
+    padding: 12px 0px;
 }
 
 body {
@@ -64,7 +64,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0px auto;
+    margin: 88px auto;
     width: 85%;
 }
 
@@ -117,20 +117,29 @@ main {
         justify-content: center;
         align-items: center;
         margin: 0px auto;
-        width: 60%;
+        max-width: 920px;
+    }
+
+    p {
+        margin-bottom: 84px;
     }
 
     a {
-        width: 70%;
+        border: 2px solid transparent;
+        transition: all ease 0.3s;
     }
 
-    .sedans-container,
-    .suvs-container,
-    .luxury-container {
-        width: 33%;
+    a:hover {
+        background-color: transparent;
+        color: var(--text);
+        border: 2px solid var(--text);
     }
 
     .sedans-container {
-        border-radius: 8px;
+        border-radius: 8px 0px 0px 8px;
+    }
+
+    .luxury-container {
+        border-radius: 0px 8px 8px 0px;
     }
 }
